--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
     <title>Learn JavaScript</title>
   </head>
   <body>
-    <script>
-        document.write("<h1>elzro</h1>");
-        document.querySelector("h1").style.color='blue';
-        document.querySelector("h1").style.fontSize='88px';
-        document.querySelector("h1").style.
-    </script>
+    subdomain take over
     
   </body>
 </html>
